Add custom Exceptions. Correct Dto's for response JSON best practices looks like.Add UserControllerTest